Effort to fix hold-touch on mobile devices

--- a/src/app/components/scene/scene.component.css
+++ b/src/app/components/scene/scene.component.css
@@ -8,5 +8,15 @@
   width: 100%;
   height: 100%;
   touch-action: none;
-  cursor: pointer;
+  cursor: default;
+
+  /* Disable styling when hold-touch on mobile */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
 }
